# pyTodo

./: .gitignore  README.md  pyproject.toml  todos.json  todos.txt
src/pytodo/: main.py
